[project]
name = "color-picker"
version = "0.1.0"
description = "TUI color picker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.4",
    "rich>=15.0.0",
    "textual>=8.2.5",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/color_picker"]
