[project]
name = "color-picker"
version = "0.1.0"
description = "TUI color picker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.2.0",
    "pyfiglet>=1.0.4",
    "pynput>=1.8.2",
    "rich>=15.0.0",
    "textual>=8.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/color_picker"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "textual-dev>=1.8.0",
]
